# fiberpath

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  WORKFLOW_REVIEW.md  gui-rehaul.md  mkdocs.yml  package-lock.json  pyproject.toml  roadmap-v2.md  roadmap-v3.md  roadmap-v5.md  setup.cfg
.github/: dependabot.yml
conformance/: README.md
cyclone_reference/: package-lock.json  package.json  readme.md
docs/: api.md  architecture.md  concepts.md  format-wind.md  getting-started.md  index.md  marlin-streaming.md  packaging.md  planner-math.md  release-checklist.md  roadmap.md  tooling.md  troubleshooting.md  vm-testing.md
examples/: README.md
fiberpath/: math_utils.py
fiberpath_api/: __main__.py  machine.py  main.py  path_policy.py  schemas.py
fiberpath_cli/: interactive.py  main.py  plan.py  plot.py  simulate.py  stream.py  validate.py
fiberpath_gui/: .gitignore  CSS_ARCHITECTURE.md  PERFORMANCE_PROFILING.md  README.md  STORE_SPLITTING_ANALYSIS.md  diagnostics.html  index.svelte.html  openapi.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.svelte.json  vite.config.ts  vitest.config.ts
fiberpath_gui/src-tauri/: Cargo.toml  tauri.conf.json
fiberpath_gui/src-tauri/capabilities/: default.json
fiberpath_gui/src-tauri/src/: api_path.rs  api_sidecar.rs  cli_path.rs  cli_process.rs  file_association.rs  main.rs  marlin.rs
planning/: ARCHITECTURE_DECISION_MARLIN.md  MARLIN_UI_UX_DESIGN.md  OUTSTANDING_VALIDATION.md  RELEASE_HISTORY.md  ROADMAP_STATUS.md  TABS_PLANNING.md  (+20 more)
(+390 files in other folders)
